--- a/crypo_wallet/app/views/coins/index.html.erb
+++ b/crypo_wallet/app/views/coins/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Coins</h1>
+<h1>Moedas</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Description</th>
-      <th>Acronym</th>
-      <th>Url image</th>
+      <th>Descrição</th>
+      <th>Acrónimo</th>
+      <th>Logo</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,10 +17,10 @@
       <tr>
         <td><%= coin.description %></td>
         <td><%= coin.acronym %></td>
-        <td><%= coin.url_image %></td>
-        <td><%= link_to 'Show', coin %></td>
-        <td><%= link_to 'Edit', edit_coin_path(coin) %></td>
-        <td><%= link_to 'Destroy', coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td> <%= image_tag coin.url_image, width: "14rem", height: "14rem"%> </td>
+        <td><%= link_to 'Mostar', coin %></td>
+        <td><%= link_to 'Editar', edit_coin_path(coin) %></td>
+        <td><%= link_to 'Remover', coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,5 @@
 
 <br>
 
-<%= link_to 'New Coin', new_coin_path %>
+<%= link_to 'Nova moeda', new_coin_path %>
+<%= link_to "Voltar", root_path%>
