Add mining types

--- a/crypo_wallet/app/views/mining_types/index.html.erb
+++ b/crypo_wallet/app/views/mining_types/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Acronym</th>
+      <th>Descrição</th>
+      <th>Acrónimo</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,11 +14,11 @@
   <tbody>
     <% @mining_types.each do |mining_type| %>
       <tr>
-        <td><%= mining_type.name %></td>
+        <td><%= mining_type.description %></td>
         <td><%= mining_type.acronym %></td>
-        <td><%= link_to 'Show', mining_type %></td>
-        <td><%= link_to 'Edit', edit_mining_type_path(mining_type) %></td>
-        <td><%= link_to 'Destroy', mining_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mostar', mining_type %></td>
+        <td><%= link_to 'Editar', edit_mining_type_path(mining_type) %></td>
+        <td><%= link_to 'Destruir', mining_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,5 @@
 
 <br>
 
-<%= link_to 'New Mining Type', new_mining_type_path %>
+<%= link_to 'Novo Tipo', new_mining_type_path %>
+<%= link_to 'Voltar', coins_path %>
