--- a/crypo_wallet/app/views/welcome/index.html.erb
+++ b/crypo_wallet/app/views/welcome/index.html.erb
@@ -1,10 +1,9 @@
-<h1>Bem-vindo, <%=@nome%>!</h1>
-
+<h1><%=I18n.t('messages.welcome')%></h1>
 <ul>
     <li>
-        <%= link_to "Cadastro de Moedas", coins_path%>
+        <%= link_to t('welcome.coins'), coins_path%>
     </li>
     <li>
-        <%= link_to "Cadastro de Tipos de Mineraçao", mining_types_path%>
+        <%= link_to t('welcome.mining_types'), mining_types_path%>
     </li>
 </ul>
