--- a/crypo_wallet/app/views/coins/index.html.erb
+++ b/crypo_wallet/app/views/coins/index.html.erb
@@ -1,13 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Moedas</h1>
-
-<table>
+<h1><%= Coin.model_name.human(count: @coins.count) %></h1>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>Descrição</th>
-      <th>Acrónimo</th>
-      <th>Logo</th>
+      <th><%= @coins.human_attribute_name(:description) %></th>
+      <th><%= @coins.human_attribute_name(:acronym) %></th>
+      <th><%= @coins.human_attribute_name(:url_image) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,10 +16,10 @@
       <tr>
         <td><%= coin.description %></td>
         <td><%= coin.acronym %></td>
-        <td> <%= image_tag coin.url_image, width: "14rem", height: "14rem"%> </td>
-        <td><%= link_to 'Mostar', coin %></td>
-        <td><%= link_to 'Editar', edit_coin_path(coin) %></td>
-        <td><%= link_to 'Remover', coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td> <%= image_tag coin.url_image, size: "25x25" %> </td>
+        <td><%= link_to t('links.show'), coin %></td>
+        <td><%= link_to t('links.edit'), edit_coin_path(coin) %></td>
+        <td><%= link_to t('links.delete'), coin, method: :delete, data: { confirm: t('messages.confirm') } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,5 +27,4 @@
 
 <br>
 
-<%= link_to 'Nova moeda', new_coin_path %>
-<%= link_to "Voltar", root_path%>
+<%= link_to t('new.coin'), new_coin_path, class:"btn btn-primary" %>
