--- a/crypo_wallet/app/views/layouts/application.html.erb
+++ b/crypo_wallet/app/views/layouts/application.html.erb
@@ -10,8 +10,7 @@
   </head>
 
   <body>
-    <h2>Cabeçalho</h2>
+    <h2><%= t('welcome.today_is')%> <%= I18n.l(Date.today)%></h2>
     <%= yield %>
-    <h2>Rodapé</h2>
   </body>
 </html>
