--- a/crypo_wallet/app/views/mining_types/index.html.erb
+++ b/crypo_wallet/app/views/mining_types/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Mining Types</h1>
+<h1><%= MiningType.model_name.human(count: @mining_types.count) %></h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>Descrição</th>
-      <th>Acrónimo</th>
+      <th><%= @mining_types.human_attribute_name(:description) %></th>
+      <th><%= @mining_types.human_attribute_name(:acronym) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= mining_type.description %></td>
         <td><%= mining_type.acronym %></td>
-        <td><%= link_to 'Mostar', mining_type %></td>
-        <td><%= link_to 'Editar', edit_mining_type_path(mining_type) %></td>
-        <td><%= link_to 'Destruir', mining_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('links.show'), mining_type %></td>
+        <td><%= link_to t('links.edit'), edit_mining_type_path(mining_type) %></td>
+        <td><%= link_to t('links.delete'), mining_type, method: :delete, data: { confirm: t('messages.confirm') } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,5 +26,4 @@
 
 <br>
 
-<%= link_to 'Novo Tipo', new_mining_type_path %>
-<%= link_to 'Voltar', coins_path %>
+<%= link_to t('new.mining_type'), new_mining_type_path, class:"btn btn-primary" %>  
