--- a/crypo_wallet/app/assets/javascripts/application.js.erb
+++ b/crypo_wallet/app/assets/javascripts/application.js.erb
@@ -13,3 +13,8 @@
 //= require rails-ujs
 //= require activestorage
 //= require turbolinks
+
+/* Exemplo de código ruby dentro de código JavaScript
+<% msg = Time.now.hour < 12 ? "Bom dia!" : "Olá!!!" %>
+alert("<%= msg %>");
+*/
