--- a/crypo_wallet/app/views/mining_types/new.html.erb
+++ b/crypo_wallet/app/views/mining_types/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Mining Type</h1>
+<h1><%= t('new.coin') %></h1>
 
-<%= render 'form', mining_type: @mining_type %>
+<%= render 'form', coin: @coin %>
 
-<%= link_to 'Back', mining_types_path %>
+<%= link_to t('links.back'), coins_path, class:"btn btn-primary" %>
