Add jquery and notify
Also, background-color and background-imaged are removed

--- a/crypo_wallet/app/assets/javascripts/application.js.erb
+++ b/crypo_wallet/app/assets/javascripts/application.js.erb
@@ -13,8 +13,5 @@
 //= require rails-ujs
 //= require activestorage
 //= require turbolinks
-
-/* Exemplo de código ruby dentro de código JavaScript
-<% msg = Time.now.hour < 12 ? "Bom dia!" : "Olá!!!" %>
-alert("<%= msg %>");
-*/
+//= require jquery
+//= require notify
