--- a/crypo_wallet/app/assets/javascripts/application.js.erb
+++ b/crypo_wallet/app/assets/javascripts/application.js.erb
@@ -15,3 +15,5 @@
 //= require turbolinks
 //= require jquery
 //= require notify
+//= require bootstrap/dist/js/bootstrap
+//= require popper.js/dist/popper
