--- a/crypo_wallet/app/views/mining_types/_form.html.erb
+++ b/crypo_wallet/app/views/mining_types/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: coin, local: true) do |form| %>
-  <% if coin.errors.any? %>
+<%= form_with(model: @mining_type, local: true) do |form| %>
+  <% if @mining_type.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(coin.errors.count, "error") %> prohibited this coin from being saved:</h2>
+      <h2><%= pluralize(@mining_type.errors.count, "error") %> prohibited this @mining_type from being saved:</h2>
 
       <ul>
-      <% coin.errors.full_messages.each do |message| %>
+      <% @mining_type.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -13,22 +13,12 @@
 
   <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description, class:"form-control", placeholder:"Bitcoin" %>
+    <%= form.text_field :description, class:"form-control", placeholder:"Proof of..." %>
   </div>
 
   <div class="form-group">
     <%= form.label :acronym %>
-    <%= form.text_field :acronym, class:"form-control", placeholder:"BTC" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :url_image %>
-    <%= form.text_field :url_image, class:"form-control", placeholder:"http://img.ur/bitcoin.png" %>
-  </div>
-  
-  <div class="form-group">
-    <%= form.label :mining_type_id %>
-    <%= form.select("mining_type_id", @mining_type_options, { include_blank: 'Selecione...' }, class:"form-control") %>
+    <%= form.text_field :acronym, class:"form-control", placeholder:"Po..." %>
   </div>
 
   <div class="actions">
