--- a/crypo_wallet/app/views/mining_types/new.html.erb
+++ b/crypo_wallet/app/views/mining_types/new.html.erb
@@ -1,5 +1,5 @@
-<h1><%= t('new.coin') %></h1>
+<h1><%= t('new.mining_type') %></h1>
 
-<%= render 'form', coin: @coin %>
+<%= render 'form', mining_type: @mining_type %>
 
-<%= link_to t('links.back'), coins_path, class:"btn btn-primary" %>
+<%= link_to t('links.back'), mining_types_path, class:"btn btn-primary" %>
