--- a/crypo_wallet/app/assets/javascripts/application.js.erb
+++ b/crypo_wallet/app/assets/javascripts/application.js.erb
@@ -10,10 +10,10 @@
 // Read Sprockets README (https://github.com/rails/sprockets#sprockets-directives) for details
 // about supported directives.
 //
-//= require rails-ujs
-//= require activestorage
-//= require turbolinks
-//= require jquery
-//= require notify
-//= require bootstrap/dist/js/bootstrap
-//= require popper.js/dist/popper
+= require rails-ujs
+= require activestorage
+= require turbolinks
+= require jquery
+= require notify
+= require bootstrap/dist/js/bootstrap
+= require popper.js/dist/popper
