--- a/crypo_wallet/app/views/welcome/_menu.html.erb
+++ b/crypo_wallet/app/views/welcome/_menu.html.erb
@@ -1,8 +1,8 @@
-<ul>
-    <li>
+<ul style="list-style-type: none;">
+    <li style="padding: 5px">
         <%= link_to "#{Coin.model_name.human}", coins_path, class:"btn btn-primary btn-lg", role:"button" %>
     </li>
-    <li>
+    <li style="padding: 5px">
         <%= link_to "#{MiningType.model_name.human}", mining_types_path, class:"btn btn-primary btn-lg", role:"button" %>
     </li>
 </ul>
