--- a/crypo_wallet/app/views/welcome/index.html.erb
+++ b/crypo_wallet/app/views/welcome/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Welcome <%=Date.today.to_s%></h1>
-
-<%= render 'menu' %>
+<div class="jumbotron">
+  <h1 class="display-4"><%= t('welcome') %></h1>
+  <p class="lead"><%= t('messages.welcome')%></p>
+  <hr class="my-4">
+  <p><%= t('messages.menu')%></p>
+  <%= render "menu" %>
+</div>
