--- a/crypo_wallet/app/assets/javascripts/application.js.erb
+++ b/crypo_wallet/app/assets/javascripts/application.js.erb
@@ -14,6 +14,7 @@
 = require activestorage
 = require turbolinks
 = require jquery
+= require jquery_ujs
 = require notify
 = require bootstrap/dist/js/bootstrap
 = require popper.js/dist/popper
