--- a/crypo_wallet/app/views/coins/index.html.erb
+++ b/crypo_wallet/app/views/coins/index.html.erb
@@ -19,8 +19,12 @@
         <td> <%= image_tag coin.url_image, size: "25x25" %> </td>
         <td><%= link_to t('links.show'), coin %></td>
         <td><%= link_to t('links.edit'), edit_coin_path(coin) %></td>
-        <td><%= link_to t('links.delete'), coin, method: :delete, data: { confirm: t('messages.confirm') } %></td>        
+        <td><%= link_to 'Destroy', coin_path(coin),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>       
       </tr>
+
+    <%= puts @coins  %>
     <% end %>
   </tbody>
 </table>
